[package]
name = "copiepate"
version = "0.2.2"
edition = "2021"
description = "Send copy events over the network"
license = "MIT"
keywords = ["clipboard", "cli", "vim"]
categories = ["command-line-utilities"]
homepage = "https://github.com/dimtion/copiepate"
repository = "https://github.com/dimtion/copiepate"
documentation = "https://github.com/dimtion/copiepate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
log = "0.4.14"
simple_logger = { version = "2.1.0", default-features = false, features = ["stderr", "colors"] }
etcetera = "0.3.2"
structopt = "0.3.21"
config = "0.11.0"
serde_derive = "1.0.126"
serde = "1.0.126"
num-traits = "0.2.14"
num-derive = "0.3.3"
chacha20poly1305 = "0.9.0"
base64 = "0.13.0"
anyhow = "1.0.56"
thiserror = "1.0.30"
rand = "0.8.5"
derive_builder = "0.11.1"
